fixing misalignment

--- a/index.css
+++ b/index.css
@@ -35,12 +35,17 @@
 @media screen and (max-width: 1500px) {
   #recommended-section {
     position: absolute;
-    top: 90vh;
+    top: 30rem;
   }
 }
+
 @media screen and (max-width: 1300px) {
   #trending {
     height: 160vh;
+  }
+  #recommended-section {
+    position: absolute;
+    top: 40rem;
   }
 }
 @media screen and (max-width: 1100px) {
